--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
 
 	<main>
 
-		<section class="run-calc-section" id="runeCalcSection">
+		<section class="rune-calc-section" id="runeCalcSection">
 
-			<img src="img/smoke.webp" srcset="img/smoke@2x.webp 2x" class="run-calc-section-bg" />
+			<img src="img/smoke.webp" srcset="img/smoke@2x.webp 2x" class="rune-calc-section-bg" />
 			<div class="container">
-				<form class="run-calc-form" id="runeCalcForm">
-					<div class="run-form-group">
+				<form class="rune-calc-form" id="runeCalcForm">
+					<div class="rune-form-group">
 						<label for="rc_language">Язык расчетов:</label>
 						<select id="rc_language" name="rc_language">
 							<option value="ru">Русский (RU)</option>
 							<option value="en">English (EN)</option>
 						</select>
 					</div>
-					<div class="run-form-group">
+					<div class="rune-form-group">
 						<label for="rc_date">Дата вашего рождения</label>
 						<input type="date" name="rc_date" id="rc_date" required>
 					</div>
-					<div class="run-form-group">
+					<div class="rune-form-group">
 						<label for="rc_familiya">Фамилия</label>
 						<input type="text" placeholder="Иванов" name="rc_familiya" id="rc_familiya" required>
 					</div>
-					<div class="run-form-group">
+					<div class="rune-form-group">
 						<label for="rc_imya">Имя</label>
 						<input type="text" placeholder="Иван" name="rc_imya" id="rc_imya" required>
 					</div>
-					<div class="run-form-group">
+					<div class="rune-form-group">
 						<label for="rc_otchestvo">Отчество (заполняется при наличии)</label>
 						<input type="text" placeholder="Иванович" name="rc_otchestvo" id="rc_otchestvo">
 					</div>					
@@ -78,47 +78,47 @@
 					</div>
 				</div>
 
-				<div id="runeCalcAbout">
+				<div id="runeCalcAbout" style="display: none;">
 
-					<div class="run-calc-section-with-img">
-						<div class="run-calc-section-text-block first-text-block">
+					<div class="rune-calc-section-with-img">
+						<div class="rune-calc-section-text-block first-text-block">
 							<p>В основе расчетов рунокода лежит нумерологическая система соответствия чисел и букв знакам рунического алфавита.</p>
 							<p>Рунокод состоит из трех рун и рассматривается как единая формула: руны в рунокоде не являются отдельными элементами, их значения трактуются с пониманием причинно-следственных связей рун в рунокоде и в футарке, а также с учетом позиции каждой руны.</p>
 						</div>
 						<img src="img/man.webp" srcset="img/man@2x.webp 2x" alt="ALT">
-						<div class="run-calc-section-text-block last-text-block">
+						<div class="rune-calc-section-text-block last-text-block">
 							<p>Пустые руны в рунокоде - это не ошибка, а один из вариантов формулы, рунокод с любым количеством пустых рун (1-3) также имеет свою интерпретацию, отражает задачи, способы реализации и результаты.
 							</p>
 						</div>
 					</div>
 
-					<div class="run-calc-section-descr">
+					<div class="rune-calc-section-descr">
 
-						<p class="run-calc-section-descr-title">Три руны символизируют судьбоносные жизненные<br/> параметры (константы), как основу личного вирда.</p>
+						<p class="rune-calc-section-descr-title">Три руны символизируют судьбоносные жизненные<br/> параметры (константы), как основу личного вирда.</p>
 
-						<div class="run-calc-section-descr-item">
+						<div class="rune-calc-section-descr-item">
 							<h3>Первая позиция в рунокоде</h3>
 							<em>руна судьбы, руна рождения, руна <br/>исходных данных</em>
 							<p>Определяется по данным рождения человека. Отражает опыт души в предыдущих воплощениях и неизменные качества, которые человек имеет по праву рождения.</p>
 						</div>
 
-						<div class="run-calc-section-descr-item">
+						<div class="rune-calc-section-descr-item">
 							<h3>Вторая позиция в рунокоде</h3>
 							<em>руна личности, руна реализации</em>
 							<p>Определяется по социальному имени и фамилии, отражает качества и способности, которые необходимо развивать для реализации задач, связанных с ролью человека в мире, показывает, как и через что человек строит отношения с вирдом, событийным полем.</p>
 						</div>
 
-						<div class="run-calc-section-descr-item">
+						<div class="rune-calc-section-descr-item">
 							<h3>Третья позиция в рунокоде</h3>
 							<em>руна успеха, руна результата</em>
 							<p>Определяется на основе сочетания значений первых двух рун. Указывает на итог, результат, смысл, к которому человек должен стремиться, опираясь на качества первых рун. Отражает ценность человека для мира - какое качество будет ассоциироваться с результатами деятельности, что останется наследием.</p>
 						</div>
 
 					</div>
-					<!-- /.run-calc-section-descr -->
+					<!-- /.rune-calc-section-descr -->
 
-					<div class="run-calc-section-descr-end">
-						<img src="img/run-bg.webp" srcset="img/run-bg@2x.webp 2x" alt="ALT">
+					<div class="rune-calc-section-descr-end">
+						<img src="img/rune-bg.webp" srcset="img/rune-bg@2x.webp 2x" alt="ALT">
 						<div class="text-block">
 							<p>Рунокод может изменяться при смене имени, фамилии, гражданства, при официальном переходе в другую языковую систему. Принимая решение о смене социального аватара и его словесно-цифровых кодов, проверяйте, как будет меняться ваш рунокод: это поможет подготовиться к трансформации и соотнести новые вызовы и задачи с вашими желаниями и возможностями.</p>
 							<p>В редких случаях рунокод не меняется при смене данных. Это вариант нормы, он говорит о фиксированной роли человека и проживании личной судьбы на данном этапе жизни.</p>
@@ -134,37 +134,42 @@
 
 	</main>
 
-	<footer class="run-footer">
+	<footer class="rune-footer">
 		<div class="container">
-			<div class="run-footer-wrapper">
-				<div class="run-footer-left">
-					<img src="img/logo.jpg" srcset="img/logo@2x.jpg 2x" class="run-footer-logo" alt="ALT">
-					<div class="run-footer-info">
+			<div class="rune-footer-wrapper">
+				<div class="rune-footer-left">
+					<img src="img/logo.jpg" srcset="img/logo@2x.jpg 2x" class="rune-footer-logo" alt="ALT">
+					<div class="rune-footer-info">
 						<p>ИП Север Александр Сергеевич</p>
 						<p>ИНН: 712400751970</p>
 						<p>ОГРНИП: 318715400011223</p>
 					</div>
-					<a href="mailto:sever.land.runa@gmail.com" class="run-footer-email">sever.land.runa@gmail.com</a>
-					<div class="run-footer-links">
+					<a href="mailto:sever.land.runa@gmail.com" class="rune-footer-email">sever.land.runa@gmail.com</a>
+					<div class="rune-footer-links">
 						<a href="#">Публичная оферта</a>
 						<a href="#">Политика конфиденциальности</a>
 					</div>
 				</div>
-				<div class="run-footer-right">
-					<div class="run-footer-socials">
-						<a href="#" class="run-footer-socials-link">
+				<div class="rune-footer-right">
+					<div class="rune-footer-socials">
+						<a href="#" class="rune-footer-socials-link">
 							<img src="img/icons/telegram.svg" alt="Telegram">
 						</a>
-						<a href="#" class="run-footer-socials-link">
+						<a href="#" class="rune-footer-socials-link">
 							<img src="img/icons/vkontakte.svg" alt="VK">
 						</a>
-						<a href="#" class="run-footer-socials-link">
+						<a href="#" class="rune-footer-socials-link">
 							<img src="img/icons/youtube.svg" alt="YouTube">
 						</a>
-						<a href="#" class="run-footer-socials-link">
+						<a href="#" class="rune-footer-socials-link">
 							<img src="img/icons/4.svg" alt="HZ">
 						</a>
 					</div>
+
+					<a href="#" class="scroll-top">
+						<img src="img/icons/arrow-up.svg" alt="Scroll Top" />
+					</a>
+
 				</div>
 			</div>
 		</div>
