--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="rune-header-text">
 				<p>На калькуляторе можно рассчитать рунокод (индивидуальный рунический код, персональный рунический код) на основных мировых языках. Для расчеты необходимы точные данные: дата рождения: день, месяц, год (время рождения не нужно).</p>
-				<p>Имя, фамилия, отчество (при наличии) - как указано в основном документе (паспорт, свидетельство о рождении) той страны, где вы проживаете и/или ведете основную деятельность. Если вы планируете смену имени/фамилии или гражданства, вы можете проверить, как изменится ваш рунокод во второй и третьей позициях, что будет отражать смену способа реализации данных вам при рождении качеств и результатов, к которым нужно стремиться.</p>
+				<p><b>Имя, фамилия, отчество (при наличии)</b> - как указано в основном документе (паспорт, свидетельство о рождении) той страны, где вы проживаете и/или ведете основную деятельность. Если вы планируете смену имени/фамилии или гражданства, вы можете проверить, как изменится ваш рунокод во второй и третьей позициях, что будет отражать смену способа реализации данных вам при рождении качеств и результатов, к которым нужно стремиться.</p>
 			</div>
 		</div>
 	</header>
@@ -37,10 +37,12 @@
 				<form class="rune-calc-form" id="runeCalcForm">
 					<div class="rune-form-group">
 						<label for="rc_language">Язык расчетов:</label>
-						<select id="rc_language" name="rc_language">
-							<option value="ru">Русский (RU)</option>
-							<option value="en">English (EN)</option>
-						</select>
+						<div class="custom-select">
+							<select id="rc_language" name="rc_language">
+								<option value="ru">Русский (RU)</option>
+								<option value="en">English (EN)</option>
+							</select>
+						</div>
 					</div>
 					<div class="rune-form-group">
 						<label for="rc_date">Дата вашего рождения</label>
@@ -82,12 +84,12 @@
 
 					<div class="rune-calc-section-with-img">
 						<div class="rune-calc-section-text-block first-text-block">
-							<p>В основе расчетов рунокода лежит нумерологическая система соответствия чисел и букв знакам рунического алфавита.</p>
+							<p><span class="mobile-element">—</span> В основе расчетов рунокода лежит нумерологическая система соответствия чисел и букв знакам рунического алфавита.</p>
 							<p>Рунокод состоит из трех рун и рассматривается как единая формула: руны в рунокоде не являются отдельными элементами, их значения трактуются с пониманием причинно-следственных связей рун в рунокоде и в футарке, а также с учетом позиции каждой руны.</p>
 						</div>
 						<img src="img/man.webp" srcset="img/man@2x.webp 2x" alt="ALT">
 						<div class="rune-calc-section-text-block last-text-block">
-							<p>Пустые руны в рунокоде - это не ошибка, а один из вариантов формулы, рунокод с любым количеством пустых рун (1-3) также имеет свою интерпретацию, отражает задачи, способы реализации и результаты.
+							<p><span class="mobile-element">—</span> Пустые руны в рунокоде - это не ошибка, а один из вариантов формулы, рунокод с любым количеством пустых рун (1-3) также имеет свою интерпретацию, отражает задачи, способы реализации и результаты.
 							</p>
 						</div>
 					</div>
