update rune items & text

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						</div>
 						<img src="img/man.webp" srcset="img/man@2x.webp 2x" alt="ALT">
 						<div class="rune-calc-section-text-block last-text-block">
-							<p><span class="mobile-element">—</span> Пустые руны в рунокоде - это не ошибка, а один из вариантов формулы, рунокод с любым количеством пустых рун (1-3) также имеет свою интерпретацию, отражает задачи, способы реализации и результаты.
+							<p><span class="mobile-element">—</span> Пустые позиции в рунокоде - это не ошибка, а один из вариантов формулы, рунокод с любым количеством пустых рун (1-3) также имеет свою интерпретацию, отражает задачи, способы реализации и результаты.
 							</p>
 						</div>
 					</div>
@@ -135,28 +135,31 @@
 							</div>
 							<div class="spoiler__content">
 								<h4>Руна судьбы</h4>
-								<p>Это та карма, которую каждый принёс из прошлого воплощения. Скопленный и сохранённый опыт; это то, что человек достиг, достиг сам проживанием своей судьбы во всех предыдущих своих рождениях. Это то, что реально принадлежит ему по праву. Руна Судьбы не имеет никакого отношения к роду и семье, это только личное — то, что уже было наработано.</p>
-								<p>Руна Судьбы — это данность, изменить которую не дано никому. Норны ткут один раз.</p>
+								<p>Отражает опыт души в предыдущих воплощениях и неизменные качества, которые человек имеет по праву рождения.</p>
+								<!-- <p>Это та карма, которую каждый принёс из прошлого воплощения. Скопленный и сохранённый опыт; это то, что человек достиг, достиг сам проживанием своей судьбы во всех предыдущих своих рождениях. Это то, что реально принадлежит ему по праву. Руна Судьбы не имеет никакого отношения к роду и семье, это только личное — то, что уже было наработано.</p>
+								<p>Руна Судьбы — это данность, изменить которую не дано никому. Норны ткут один раз.</p> -->
 
 								<h4>Руна личности</h4>
-								<p>Основа Руны Личности — это социальное имя, которое в настоящую эпоху человек может менять так, как ему заблагорассудится. Что невозможно было бы в стародавние времена, когда имя отображало характер человека, его богов-покровителей и, конечно же, кровь — принадлежность к какому-то роду-племени. Иногда в имени кодировалась и принадлежность к месту, что в мистике имянаречения тоже не является случайным фактором.</p>
-								<p>Теперь же социальное имя изменчиво и переменчиво и, как следствие (а может быть, не следствие, а наоборот — программная причина), изменчивой и переменчивой становится и Руна Личности. Помня, что эта руна отображает ТЗ человека на данное воплощение, отображает некие личностные качества, которые необходимо наработать или приобрести, видим, что в настоящую эпоху у человека есть такое право — менять своё ТЗ, перепрограммировать свою судьбу как отображаемый сценарий жизненного пути. У человека есть право иначе расставить акценты личности, проявить или спрятать свою натуру и, как следствие, реализоваться в совсем иных результатах. Но, подчеркну, всё это ему доступно только в мире людей, только в пространстве социальных игр. В анналах «Книги Судеб», в узорах полотна Норн его линия неизменна, а смена личности — это не смена узора на полотне реальности, а просто окрашивание этого узора в иные оттенки.</p>
+								<p>Отражает качества и способности, которые необходимо развивать для реализации задач, связанных с ролью человека в мире, показывает, как и через что человек строит отношения с вирдом, событийным полем.</p>
+								<!-- <p>Основа Руны Личности — это социальное имя, которое в настоящую эпоху человек может менять так, как ему заблагорассудится. Что невозможно было бы в стародавние времена, когда имя отображало характер человека, его богов-покровителей и, конечно же, кровь — принадлежность к какому-то роду-племени. Иногда в имени кодировалась и принадлежность к месту, что в мистике имянаречения тоже не является случайным фактором.</p>
+								<p>Теперь же социальное имя изменчиво и переменчиво и, как следствие (а может быть, не следствие, а наоборот — программная причина), изменчивой и переменчивой становится и Руна Личности. Помня, что эта руна отображает ТЗ человека на данное воплощение, отображает некие личностные качества, которые необходимо наработать или приобрести, видим, что в настоящую эпоху у человека есть такое право — менять своё ТЗ, перепрограммировать свою судьбу как отображаемый сценарий жизненного пути. У человека есть право иначе расставить акценты личности, проявить или спрятать свою натуру и, как следствие, реализоваться в совсем иных результатах. Но, подчеркну, всё это ему доступно только в мире людей, только в пространстве социальных игр. В анналах «Книги Судеб», в узорах полотна Норн его линия неизменна, а смена личности — это не смена узора на полотне реальности, а просто окрашивание этого узора в иные оттенки.</p> -->
 								<h4>Руна успеха</h4>
-								<p>Итоговая руна результата. Описывает тот след, тот отпечаток вашего сознания, вашей личности и жизни, который ожидаем от вас в данной реальности. Это то, что делается не для себя, а то, что останется после вас. Как доказательство, что программа судьбы была понята и отработана полно и с ожидаемым результатом, что природные дары (или их отсутствие) нашли верное применение, — и это правильно.</p>
+								<p>Указывает на итог, результат, смысл, к которому человек должен стремиться, опираясь на качества первых рун. Отражает ценность человека для мира - какое качество будет ассоциироваться с результатами деятельности, что останется наследием.</p>
+								<!-- <p>Итоговая руна результата. Описывает тот след, тот отпечаток вашего сознания, вашей личности и жизни, который ожидаем от вас в данной реальности. Это то, что делается не для себя, а то, что останется после вас. Как доказательство, что программа судьбы была понята и отработана полно и с ожидаемым результатом, что природные дары (или их отсутствие) нашли верное применение, — и это правильно.</p> -->
 							</div>
 					  </div>
 						<div id="runesWrapper" class="runes-wrapper">
 							<div class="runes-item">
 								<h4>Руна Судьбы:</h4>
-								<div id="essenceRune"></div>
+								<div id="essenceRune" class="runes-item-info"></div>
 							</div>
 							<div class="runes-item">
 								<h4>Руна Личности:</h4>
-								<div id="personalityRune"></div>
+								<div id="personalityRune" class="runes-item-info"></div>
 							</div>
 							<div class="runes-item">
 								<h4>Руна Успеха:</h4>
-								<div id="goldenRune"></div>
+								<div id="goldenRune" class="runes-item-info"></div>
 							</div>
 						</div>
 
