upd rune item title

--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
 					  </div>
 						<div id="runesWrapper" class="runes-wrapper">
 							<div class="runes-item">
-								<h4>Руна Судьбы:</h4>
+								<h4>Руна <br/>Судьбы:</h4>
 								<div id="essenceRune" class="runes-item-info"></div>
 							</div>
 							<div class="runes-item">
-								<h4>Руна Личности:</h4>
+								<h4>Руна <br/>Личности:</h4>
 								<div id="personalityRune" class="runes-item-info"></div>
 							</div>
 							<div class="runes-item">
-								<h4>Руна Успеха:</h4>
+								<h4>Руна <br/>Успеха:</h4>
 								<div id="goldenRune" class="runes-item-info"></div>
 							</div>
 						</div>
