--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						</div>
 
 						<div class="rune-video-player">
-							<iframe src="https://www.youtube.com/embed/qw1VFWuE-IA?si=dVlohnWeuxF30bO2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+							<!-- <iframe src="https://www.youtube.com/embed/qw1VFWuE-IA?si=dVlohnWeuxF30bO2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 							<!-- <button class="play"><img src="img/icons/play.png" alt="Play"></button> -->
 						</div>
 
