--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<p><span class="mobile-element">—</span> В основе расчетов рунокода лежит нумерологическая система соответствия чисел и букв знакам рунического алфавита.</p>
 							<p>Рунокод состоит из трех рун и рассматривается как единая формула: руны в рунокоде не являются отдельными элементами, их значения трактуются с пониманием причинно-следственных связей рун в рунокоде и в футарке, а также с учетом позиции каждой руны.</p>
 						</div>
-						<img src="img/man.webp" srcset="img/man@2x.webp 2x" alt="ALT">
+						<img src="img/man.webp" srcset="img/man@2x.webp 2x" class="rune-calc-section-with-img-bg" alt="ALT">
 						<div class="rune-calc-section-text-block last-text-block">
 							<p><span class="mobile-element">—</span> Пустые позиции в рунокоде - это не ошибка, а один из вариантов формулы, рунокод с любым количеством пустых рун (1-3) также имеет свою интерпретацию, отражает задачи, способы реализации и результаты.
 							</p>
@@ -164,7 +164,7 @@
 						</div>
 
 						<div class="rune-video-player">
-							<!-- <iframe src="https://www.youtube.com/embed/qw1VFWuE-IA?si=dVlohnWeuxF30bO2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+							<iframe src="https://www.youtube.com/embed/qw1VFWuE-IA?si=dVlohnWeuxF30bO2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 							<!-- <button class="play"><img src="img/icons/play.png" alt="Play"></button> -->
 						</div>
 
