--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<input type="text" placeholder="Иванович" name="rc_otchestvo" id="rc_otchestvo">
 					</div>					
 					<button type="submit" class="btn">Рассчитать</button>
-					<span class="agree">Нажимая на кнопку «Рассчитать», Вы даете согласие на <a href="#">обработку персональных данных</a> и соглашаетесь с <a href="#">политикой конфиденциальности</a>.</span>
+					<span class="agree">Нажимая на кнопку «Рассчитать», Вы даете согласие на <a href="https://sever.land/soglasie" target="_blank">обработку персональных данных</a> и соглашаетесь с <a href="https://sever.land/policy" target="_blank">политикой конфиденциальности</a>.</span>
 				</form>
 
 				<h2>Индивидуальный Рунический <span><span>Код состоит из трех рун:</span></span></h2>
@@ -189,23 +189,23 @@
 					</div>
 					<a href="mailto:sever.land.runa@gmail.com" class="rune-footer-email">sever.land.runa@gmail.com</a>
 					<div class="rune-footer-links">
-						<a href="#">Публичная оферта</a>
-						<a href="#">Политика конфиденциальности</a>
+						<a href="https://sever.land/soglasie">Публичная оферта</a>
+						<a href="https://sever.land/policy">Политика конфиденциальности</a>
 					</div>
 				</div>
 				<div class="rune-footer-right">
 					<div class="rune-footer-socials">
-						<a href="#" class="rune-footer-socials-link">
+						<a href="https://t.me/runa_sever" class="rune-footer-socials-link" target="_blank" title="Телеграм">
 							<img src="img/icons/telegram.svg" alt="Telegram">
 						</a>
-						<a href="#" class="rune-footer-socials-link">
-							<img src="img/icons/vkontakte.svg" alt="VK">
+						<a href="https://vk.com/runa.sever" class="rune-footer-socials-link" target="_blank" title="Вконтакте">
+							<img src="img/icons/vkontakte.svg" alt="Вконтакте">
 						</a>
-						<a href="#" class="rune-footer-socials-link">
+						<a href="https://www.youtube.com/@alexander-sever" class="rune-footer-socials-link" target="_blank" title="YouTube">
 							<img src="img/icons/youtube.svg" alt="YouTube">
 						</a>
-						<a href="#" class="rune-footer-socials-link">
-							<img src="img/icons/4.svg" alt="HZ">
+						<a href="https://dzen.ru/alexander_sever" class="rune-footer-socials-link" target="_blank" title="Дзен">
+							<img src="img/icons/dzen.svg" alt="Дзен">
 						</a>
 					</div>
 
